src/cs/base/browser/ui/splitview/splitview.css
.ui-split-view {
  position: relative;
  width: 100%;
  height: 100%;
  min-width: 0;
  min-height: 0;
  overflow: hidden;
}

.ui-split-view[data-resizing="true"] {
  user-select: none;
}

.ui-split-view[data-orientation="horizontal"][data-resizing="true"] {
  cursor: col-resize;
}

.ui-split-view[data-orientation="vertical"][data-resizing="true"] {
  cursor: row-resize;
}

.ui-split-view__viewport {
  width: 100%;
  height: 100%;
  min-width: 0;
  min-height: 0;
}

.ui-split-view[data-orientation="horizontal"] > .ui-split-view__viewport {
  overflow-x: auto;
  overflow-y: hidden;
}

.ui-split-view[data-orientation="vertical"] > .ui-split-view__viewport {
  overflow-x: hidden;
  overflow-y: auto;
}

.ui-split-view__grid {
  display: grid;
  min-width: 0;
  min-height: 0;
}

.ui-split-view[data-orientation="horizontal"] > .ui-split-view__viewport > .ui-split-view__grid {
  grid-auto-flow: column;
}

.ui-split-view[data-orientation="vertical"] > .ui-split-view__viewport > .ui-split-view__grid {
  grid-auto-flow: row;
}

.ui-split-view__pane {
  position: relative;
  min-width: 0;
  min-height: 0;
  overflow: hidden;
}

.ui-split-view[data-orientation="horizontal"] > .ui-split-view__viewport > .ui-split-view__grid > .ui-split-view__pane {
  height: 100%;
}

.ui-split-view[data-orientation="vertical"] > .ui-split-view__viewport > .ui-split-view__grid > .ui-split-view__pane {
  width: 100%;
}

